--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clase",
+  "name": "handlebars",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,15 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "tomás hurtado",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
     "express-handlebars": "^6.0.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16"
   },
-  "description": ""
+  "description": "desde mac",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tomastienegilbert/handlebars.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tomastienegilbert/handlebars/issues"
+  },
+  "homepage": "https://github.com/tomastienegilbert/handlebars#readme"
 }
